--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,8 +7,9 @@ jobs:
   build:
     executor: python_docker
     steps:
-      -run:
-        command: echo 'Hello world'
+      - run:
+        command: |
+          echo 'Hello world'
 
 workflows:
   build_test_and_deploy:
